--- a/1.html
+++ b/1.html
@@ -1,12 +1,16 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Judul</title>
+    <title>Mahasiwa Komputer</title>
   </head>
   <body>
-    <h1>Lorem ipsum</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis id
-      veritatis exercitationem eos
+    <h1>Mahasiwa Komputer 2024</h1>
+    <h2>Mahasiwa Komputer 2024</h2>
+    <h3>Mahasiwa Komputer 2024</h3>
+    <p>Selamat datang di channel Mahasiswa Komptuter, belajar free dan berbagi.
+      <br>
+      <img src="a.jpg" alt="Mahasiswa Komputer">
+    <p>Selamat datang di channel Mahasiswa Komptuter, belajar free dan berbagi.
     </p>
   </body>
 </html>
